tests/ui/fail_datagram_handler_before_codec.stderr
error[E0599]: no method named `handler` found for struct `DatagramPipelineBuilder<rs_netty::pipeline::state::Start, rs_netty::pipeline::datagram::builder::Missing, Identity, Identity, rs_netty::pipeline::datagram::builder::Missing, Identity, (), (), ()>` in the current scope
  --> tests/ui/fail_datagram_handler_before_codec.rs:14:33
   |
14 |     let _ = datagram_pipeline().handler(Echo);
   |                                 ^^^^^^^ private field, not a method
